--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <div id="blurb">
       <img src="img/head_shot.jpg" alt="Profile">
-      <p>Hi! My name is Akhila and I am a Junior studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span> at Cornell University. More specifically, I am interested in <span class="interest">computer vision</span>, <span class="interest">machine learning</span>, and <span class="interest">artificial intelligence</span>! I am also a member of Cornell Data Science club and am on the e-board as the Vice President of Education.<br>
+      <p>Hi! My name is Akhila and I just completed my third year of undergrad at Cornell University studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span>. More specifically, I am interested in <span class="interest">computer vision</span>, <span class="interest">machine learning</span>, and <span class="interest">artificial intelligence</span>! I am also a member of Cornell Data Science club and am on the e-board as the Education Lead. This summer I will be working at Numenta as an Algorithms Intern.<br>
       <br>
-      Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, exercising, and keeping up with my many TV shows. Some of the shows I love include Doctor Who, Game of Thrones, Bob's Burgers, South Park, and Scrubs.  I have recently decided to start The Blacklist!<br>
+      Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, exercising, and keeping up with my many TV shows. Some of the shows I love include Doctor Who, Game of Thrones, Bob's Burgers, South Park, Scrubs, and the Blacklist.<br>
       <br>
       Feel free to message me if you want to talk about CV, ML, AI or even one of the shows I follow!</p>
     </div>
@@ -35,7 +35,7 @@
       <ul>
         <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
         <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
-        <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+        <li><a href="https://www.linkedin.com/in/akhilaananthram"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
         <li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
       </ul>
     </div>
