--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 
       <div class="project">
         <div class="details">
-          <h3 class="subcategory">Analysis of the Anti-Vaccine Movement and Social Media</h3>
+          <h3 class="subcategory">Analysis of the Anti-Vaccine Movement through Social Media</h3>
           <p>This project was for the Data Science Hackathon at Cornell Tech.  My team and I wanted to see what we could learn about the anti-vaccine movement through social media, specifically Twitter.  We collected tweets from the past 10 days related to the movement and created a network graph of the users, hashtags, and linked websites.  Nodes were connected if the users followed each other, a user mentioning a topic, or two topics in the same tweet. As we were trying to identify the two sides of the movement (for and against), we clustered the graph.  To actually learn about the two movements, we created summaries of the tweets, hashtags, and linked websites for both sides.  We were hoping to see if either side had a scientific base. We learned that the two sides are connected, so there was a bit of overlap in the summaries. Overall, this was an interesting study to see the role of social media in present day movements.  This project could be expanded to be a Twitter analytics tool.  To see the code, please click <a href="https://github.com/dhruvsinghal/VaccineStudy">here</a>.</p>
         </div>
       </div>
@@ -80,7 +80,7 @@
       <ul>
         <li><a href="mailto:asa225@cornell.edu"><img src="img/email.png" alt="Email"></a></li>
         <li><a href="https://github.com/akhilaananthram"><img src="img/github.png" alt="Github"></a></li>
-        <li><a href="https://www.linkedin.com/pub/akhila-ananthram/5a/574/3a2"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+        <li><a href="https://www.linkedin.com/in/akhilaananthram"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
         <li><a href="img/CV.pdf"><img src="img/resume.png" alt="Resume"></a></li>
       </ul>
     </footer>
