--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <div id="blurb">
       <img src="img/head_shot.jpg" alt="Profile">
-      <p>Hi! My name is Akhila and I just completed my third year of undergrad at Cornell University studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span>. More specifically, I am interested in <span class="interest">computer vision</span>, <span class="interest">machine learning</span>, and <span class="interest">artificial intelligence</span>! I am also a member of Cornell Data Science club and am on the e-board as the Education Lead. This summer I will be working at Numenta as an Algorithms Intern.<br>
+      <p>Hi! My name is Akhila and I am in my last year of undergrad at Cornell University studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span>. More specifically, I am interested in <span class="interest">computer vision</span>, <span class="interest">machine learning</span>, and <span class="interest">artificial intelligence</span>! I am also a member of Cornell Data Science and am on the e-board as the Education Lead. This past summer worked at Numenta as an Algorithms Intern.<br>
       <br>
-      Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, exercising, and keeping up with my many TV shows. Some of the shows I love include Doctor Who, Game of Thrones, Bob's Burgers, South Park, Scrubs, and the Blacklist.<br>
+      Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, exercising, reading, and keeping up with my many TV shows. Some of the shows I love include Doctor Who, Game of Thrones, Bob's Burgers, South Park, Scrubs, and the Blacklist.<br>
       <br>
       Feel free to message me if you want to talk about CV, ML, AI or even one of the shows I follow!</p>
     </div>
