--- a/experience.html
+++ b/experience.html
@@ -102,8 +102,8 @@
         <div class="job1">
           <img src="img/cornell.gif" alt="Cornell">
           <h3 class="subcategory">CS 4780: Machine Learning</h3>
-          <h4 class="position">Teaching Assistant</h4>
-          <h4 class="time">August 2015 – Present</h4>
+          <h4 class="position">Head Teaching Assistant</h4>
+          <h4 class="time">August 2015 – December 2015</h4>
           <h4 class="time">Professor Kilian Weinberger</h4>
           <ul>
             <li>Hold office hours</li>
@@ -118,7 +118,7 @@
           <img src="img/cds.jpg" alt="CDS" style="border: 2px solid">
           <h3 class="subcategory">Cornell Data Science</h3>
           <h4 class="position">Education Lead</h4>
-          <h4 class="time">December 2014 – Present</h4>
+          <h4 class="time">December 2014 – December 2015</h4>
           <ul>
             <li>Organize a 5 hour <a href="https://github.com/akhilaananthram/data-science-crash-course">crash course</a> for 60 students on Data Science</li>
             <li>Hold weekly <a href="https://github.com/akhilaananthram/data-science-educational-series">educational sessions</a></li>
