--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="blurb">
       <img src="img/head_shot.jpg" alt="Profile">
-      <p>Hi! My name is Akhila and I am in my last year of undergrad at Cornell University studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span>. More specifically, I am interested in <span class="interest">computer vision</span>, <span class="interest">machine learning</span>, and <span class="interest">artificial intelligence</span>! I am also a member of Cornell Data Science and am on the e-board as the Education Lead. This past summer I worked at Numenta as an Algorithms Intern.<br>
+      <p>Hi! My name is Akhila and I am in my last semester of undergrad at Cornell University majoring in <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span>. This December I am transferring to the Masters of Engineering program at Cornell in <span class="interest">Computer Science</span>. More specifically, I am focused in <span class="interest">computer vision</span>, <span class="interest">machine learning</span>, and <span class="interest">artificial intelligence</span>! I am also a member of <span class="interest">Cornell Data Science</span> and just finished my term on the e-board as the Education Lead. This past summer I worked at Numenta as an Algorithms Intern.<br>
       <br>
       Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, exercising, reading, and keeping up with my many TV shows. Some of the shows I love include Doctor Who, Game of Thrones, Bob's Burgers, South Park, Scrubs, and the Blacklist.<br>
       <br>
