--- a/experience.html
+++ b/experience.html
@@ -162,10 +162,11 @@
         <div class="subject">
           <h3 >Computer Science Courses</h3>
           <div class="group">
-            <h4 class="year">Senior Year</h4>
+            <h4 class="year">M. Eng</h4>
             <ul>
               <li><span class="courseID">CS 5150</span> - Software Engineering</li>
               <li><span class="courseID">CS 4775</span> - Computational Genetics</li>
+              <li><span class="courseID">CS 7090</span> - Computer Science Colloquium</li>
             </ul>
           </div>
           
