--- a/experience.html
+++ b/experience.html
@@ -164,6 +164,10 @@
           <div class="group">
             <h4 class="year">M. Eng</h4>
             <ul>
+              <li><span class="courseID">CS 4754</span> - Human Robot Interaction - Research and Design</li>
+              <li><span class="courseID">CS 6832</span> - Applied Cryptography</li>
+              <li><span class="courseID">CS 6751</span> - Introduction to Robotic Mobile Manipulation</li>
+              <li><span class="courseID">CS 5306</span> - Crowdsourcing and Human Computation</li>
               <li><span class="courseID">CS 5150</span> - Software Engineering</li>
               <li><span class="courseID">CS 4775</span> - Computational Genetics</li>
               <li><span class="courseID">CS 7090</span> - Computer Science Colloquium</li>
