--- a/projects.html
+++ b/projects.html
@@ -49,28 +49,35 @@
       <h2 class="category">In-Class</h2>
       <div class="project">
         <div class="details">
-          <h3 class="subcategory">Artificial Intelligence Practicum</h3>
+          <h3 class="subcategory">Software Engineering - Fall 2015</h3>
+          <p>Our team of eight people designed and implemented a new scheduling system for the Ithaca Health Alliance to use at the Ithaca Free Clinic, for scheduling volunteer shifts. With the constraint of no funds available for hosting a web application, we designed a local python application which used Google Appscript and Forms to communicate with the volunteers. My role on the team was co-designing the storyboards and co-programming the UI/UX interface.</p>
+        </div>
+      </div>
+      
+      <div class="project">
+        <div class="details">
+          <h3 class="subcategory">Artificial Intelligence Practicum - Fall 2014</h3>
           <p>My partner, <a href="http://griffinbrodman.com">Griffin</a>, and I wanted to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  After the class was over, we started to implement the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
         </div>
       </div>
       
       <div class="project">
         <div class="details">
-          <h3 class="subcategory">Machine Learning</h3>
+          <h3 class="subcategory">Machine Learning - Fall 2014</h3>
           <p>My team participated in the Kaggle competition, conducting sentiment analysis of movie review.  We compared multiple machine learning techniques.  To see our paper, please click <a href="img/MLProject.pdf">here</a>.</p>
         </div>
       </div>
 
       <div class="project">
         <div class="details">
-          <h3 class="subcategory">Computational Linguistics</h3>
+          <h3 class="subcategory">Computational Linguistics - Spring 2014</h3>
           <p>I analyzed phonations for speaker identification.  I looked at the actual waveforms of two speakers to see if it was possible to identify who was speaking using the F0 and spectral tilt values as features in an SVM.  For the code, please click <a href="https://github.com/akhilaananthram/Speaker_Identification">here</a>. You can see my results from the end of Sophomore year <a href="img/CompLingProject.pdf">here</a>.</p>
         </div>
       </div>
 
       <div class="project">
         <div class="details">
-          <h3 class="subcategory">Computer Vision</h3>
+          <h3 class="subcategory">Computer Vision - Fall 2013</h3>
           <p>Some cool projects I've done include Image Scissors to semi-automatically cut out something from an image, a feature detector to compare images, a Panorama maker, and a pedestrian detector using Machine Learning. </p>
         </div>
       </div>
