--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="content-header" id="home">
 				<div class="toggle-icon"><a id="menu-toggle" href="#" class="glyphicon glyphicon-menu-hamburger btn-menu toggle"></a></div>
                 <h1>Akhila Ananthram</h1>
-				<p><a class="btn btn-default">Know More</a></p>
+				<p><a class="btn btn-default" href="#anch1">Know More</a></p>
             </div>
 
             <div class="page-content inset" data-spy="scroll" data-target="#spy">
